[package]
name = "dnd_helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.28.0", features = ["event-stream"] }
delegate = "0.12.0"
enum-map = "2.7.3"
flexi_logger = "0.28.5"
futures = "0.3.30"
log = "0.4.22"
ratatui = "0.28.0"
regex = "1.10.5"
strum = { version = "0.26.2", features = ["derive"] }
tokio = { version = "1.39.2", features = ["full"] }
tokio-util = "0.7.11"
